--- a/package.json
+++ b/package.json
@@ -5,4 +5,6 @@
 	"main": "dist/index.js",
 	"browser": "dist/index.js",
 	"scripts": {
-		"help": "node src/help.
+		"help": "node src/help.ts",
+		"clean": "rm -rf dist",
+		"build": "npm run clean
