--- a/package.json
+++ b/package.json
@@ -18,4 +18,6 @@
 	"author": "DeBeem, Team.",
 	"homepage": "https://github.com/debeem/",
 	"dependencies": {
-		
+		"chalk": "^5.3.0",
+		"crypto-browserify": "^3.12.0",
+		"debeem-ut
