--- a/package.json
+++ b/package.json
@@ -20,4 +20,7 @@
 	"dependencies": {
 		"chalk": "^5.3.0",
 		"crypto-browserify": "^3.12.0",
-		"debeem-ut
+		"debeem-utils": "^1.0.48",
+		"ethers": "^6.8.0",
+		"lodash": "^4.17.21",
+		"menoeti
