--- a/package.json
+++ b/package.json
@@ -25,4 +25,8 @@
 		"lodash": "^4.17.21",
 		"menoetius": "^0.0.3",
 		"minimist": "^1.2.8",
-		"multiformats": "^12.
+		"multiformats": "^12.0.1",
+		"node-forge": "^1.3.1",
+		"uint8arrays": "^4.0.6"
+	},
+	"devDepen
