--- a/package.json
+++ b/package.json
@@ -29,4 +29,6 @@
 		"node-forge": "^1.3.1",
 		"uint8arrays": "^4.0.6"
 	},
-	"devDepen
+	"devDependencies": {
+		"@babel/preset-env": "^7.21.5",
+		"@babel/prese
