--- a/package.json
+++ b/package.json
@@ -35,4 +35,6 @@
 		"@jest/globals": "^29.5.0",
 		"@types/jest": "^29.5.1",
 		"@types/lodash": "^4.14.200",
-		"@types/node": "^
+		"@types/node": "^20.3.3",
+		"@types/node-forge": "^1.3.8",
+		"@type
