--- a/package.json
+++ b/package.json
@@ -37,4 +37,7 @@
 		"@types/lodash": "^4.14.200",
 		"@types/node": "^20.3.3",
 		"@types/node-forge": "^1.3.8",
-		"@type
+		"@types/readable-stream": "^2.3.15",
+		"jest": "^29.6.4",
+		"ts-jest": "^29.1.0",
+		"
