--- a/package.json
+++ b/package.json
@@ -40,4 +40,6 @@
 		"@types/readable-stream": "^2.3.15",
 		"jest": "^29.6.4",
 		"ts-jest": "^29.1.0",
-		"
+		"ts-loader": "^9.4.2",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.1.6
