--- a/package.json
+++ b/package.json
@@ -42,4 +42,9 @@
 		"ts-jest": "^29.1.0",
 		"ts-loader": "^9.4.2",
 		"ts-node": "^10.9.1",
-		"typescript": "^5.1.6
+		"typescript": "^5.1.6"
+	},
+	"contributors": [
+		"DeBeem, Team."
+	]
+}
